# laser_uav_controllers

./: CMakeLists.txt  README.md  package.xml
include/laser_uav_controllers/: common.hpp  indi_controller.hpp  nmpc_controller.hpp  nmpc_controller.hpp_
params/nmpc_controller/: lr7pro.yaml  x500.yaml
scripts/: .generate_c_code.py.swp  acados_ocp.json  generate_c_code.py  quadrotor_build_model.py  quadrotor_model.py
scripts/c_generated_code/: Makefile  acados_sim_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.h  main_quadrotor_ode  main_sim_quadrotor_ode
scripts/c_generated_code/quadrotor_ode_cost/: quadrotor_ode_cost_y_e_fun_jac_ut_xt.c  quadrotor_ode_cost_y_fun_jac_ut_xt.c
scripts/c_generated_code/quadrotor_ode_model/: quadrotor_ode_expl_ode_fun.c  quadrotor_ode_expl_vde_adj.c  quadrotor_ode_expl_vde_forw.c
scripts/quadrotor_ode/: Makefile  acados_sim_solver_quadrotor_ode.c  acados_sim_solver_quadrotor_ode.h  acados_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.h  main_quadrotor_ode  main_quadrotor_ode.c  main_sim_quadrotor_ode  main_sim_quadrotor_ode.c
scripts/quadrotor_ode/quadrotor_ode_cost/: quadrotor_ode_cost_y_0_fun.c  quadrotor_ode_cost_y_0_fun_jac_ut_xt.c  quadrotor_ode_cost_y_0_hess.c  quadrotor_ode_cost_y_e_fun.c  quadrotor_ode_cost_y_e_fun_jac_ut_xt.c  quadrotor_ode_cost_y_e_hess.c  quadrotor_ode_cost_y_fun.c  quadrotor_ode_cost_y_fun_jac_ut_xt.c  quadrotor_ode_cost_y_hess.c
scripts/quadrotor_ode/quadrotor_ode_model/: quadrotor_ode_expl_ode_fun.c  quadrotor_ode_expl_vde_adj.c  quadrotor_ode_expl_vde_forw.c
src/: common.cpp  indi_controller.cpp  nmpc_controller.cpp  nmpc_controller.cpp_
